--- a/packages/linux-firmware/rtl8723bs_bt/system.d/rtl8723bs_bt-firmware.service
+++ b/packages/linux-firmware/rtl8723bs_bt/system.d/rtl8723bs_bt-firmware.service
@@ -1,8 +1,11 @@
 [Unit]
-Description=Realtek sdio firmware update
+Description=Attach /dev/ttyS1 to BlueZ stack
+Wants=bluetooth.service
+Before=bluetooth.service
+After=dev-ttyS1.device
 
 [Service]
 Type=simple
-RemainAfterExit=yes
-EnvironmentFile=/usr/share/bttty.conf
-ExecStart=/usr/bin/rtk_hciattach -n -s 115200 ${BTTTY} rtk_h5 2000000
+ExecStartPre=/usr/sbin/rfkill unblock bluetooth
+ExecStart=/usr/bin/rtk_hciattach -n -s 115200 /dev/ttyS1 rtk_h5 2000000
+ExecStopPost=/usr/sbin/rfkill block bluetooth
