samba: Add Bezel, Splash and Logfiles
Also use default smb.conf

--- a/packages/network/samba/config/smb.conf
+++ b/packages/network/samba/config/smb.conf
@@ -1,7 +1,8 @@
 # SPDX-License-Identifier: GPL-2.0-or-later
 # Copyright (C) 2009-2016 Stephan Raue (stephan@openelec.tv)
-# Copyright (C) 2017-2018 Team LibreELEC (https://libreelec.tv)
-# Copyright (C) 2018-present Team CoreELEC (https://coreelec.org)
+# Copyright (C) 2017-2019 Team LibreELEC (https://libreelec.tv)
+# Copyright (C) 2019-present Team CoreELEC (https://coreelec.org)
+
 
 # samba.conf v4 (do not remove)
 
@@ -9,7 +10,7 @@
 # available from your machine
 
 [global]
-  server string = CoreELEC
+  server string = EmuELEC
   browseable = yes
   writeable = yes
   printable = no
@@ -59,38 +60,6 @@
   writeable = yes
   root preexec = mkdir -p /storage/.update
 
-[Videos]
-  path = /storage/videos
-  available = yes
-  browseable = yes
-  public = yes
-  writeable = yes
-  root preexec = mkdir -p /storage/videos
-
-[Music]
-  path = /storage/music
-  available = yes
-  browseable = yes
-  public = yes
-  writeable = yes
-  root preexec = mkdir -p /storage/music
-
-[TV Shows]
-  path = /storage/tvshows
-  available = yes
-  browseable = yes
-  public = yes
-  writeable = yes
-  root preexec = mkdir -p /storage/tvshows
-
-[Recordings]
-  path = /storage/recordings
-  available = yes
-  browseable = yes
-  public = yes
-  writeable = yes
-  root preexec = mkdir -p /storage/recordings
-
 [Downloads]
   path = /storage/downloads
   available = yes
@@ -99,21 +68,12 @@
   writeable = yes
   root preexec = mkdir -p /storage/downloads
 
-[Pictures]
-  path = /storage/pictures
+[USB Media]
+  path = /var/media
   available = yes
   browseable = yes
   public = yes
-  writeable = yes
-  root preexec = mkdir -p /storage/pictures
-
-[Emulators]
-  path = /storage/emulators
-  available = yes
-  browseable = yes
-  public = yes
-  writeable = yes
-  root preexec = mkdir -p /storage/emulators
+  writeable = yes  
 
 [Configfiles]
   path = /storage/.config
@@ -123,51 +83,113 @@
   writeable = yes
   root preexec = mkdir -p /storage/.config
 
-[Userdata]
-  path = /storage/.kodi/userdata
-  available = yes
-  browseable = yes
-  public = yes
-  writeable = yes
-  root preexec = mkdir -p /storage/.kodi/userdata
-
-[Screenshots]
-  path = /storage/screenshots
-  available = yes
-  browseable = yes
-  public = yes
-  writeable = yes
-  root preexec = mkdir -p /storage/screenshots
-
 [Logfiles]
-  path = /storage/logfiles
+  path = /emuelec/logs
   available = yes
   browseable = yes
   public = yes
   writeable = yes
-  root preexec = mkdir -p /storage/logfiles
-  root preexec = createlog
-
-[Backup]
-  path = /storage/backup
+  root preexec = mkdir -p /emuelec/logs
+  
+[ROMS]
+  path = /storage/roms
   available = yes
   browseable = yes
   public = yes
   writeable = yes
-  root preexec = mkdir -p /storage/backup
-
-[Picons]
-  path = /storage/picons
+  root preexec = mkdir -p /storage/roms
+  
+[Emulationstation Config]
+  path = /storage/.emulationstation
   available = yes
   browseable = yes
   public = yes
   writeable = yes
-  root preexec = mkdir -p /storage/picons/tvh /storage/picons/vdr
-
-[Addons]
-  path = /storage/.kodi/addons
+  root preexec = mkdir -p /storage/.emulationstation
+  
+[Storage]
+  path = /storage
+  available = yes
+  browseable = yes
+  public = yes
+  writeable = yes  
+  
+[Assets]
+  path = /tmp/assets
   available = yes
   browsable = yes
   public = yes
   writable = yes
-  root preexec = mkdir -p /storage/.kodi/addons
+  root preexec = mkdir -p /tmp/assets
+
+[Overlays]
+  path = /tmp/overlays
+  available = yes
+  browsable = yes
+  public = yes
+  writable = yes
+  root preexec = mkdir -p /tmp/overlays
+
+[Bezels]
+  path = /storage/overlays/bezels
+  available = yes
+  browsable = yes
+  public = yes
+  writable = yes
+  root preexec = mkdir -p /storage/overlays/bezels
+
+[Splash]
+  path = /storage/overlays/splash
+  available = yes
+  browsable = yes
+  public = yes
+  writable = yes
+  root preexec = mkdir -p /storage/overlays/splash
+
+[Cores]
+  path = /tmp/cores
+  available = yes
+  browsable = yes
+  public = yes
+  writable = yes
+  root preexec = mkdir -p /tmp/cores
+
+[Playlists]
+  path = /tmp/playlists
+  available = yes
+  browsable = yes
+  public = yes
+  writable = yes
+  root preexec = mkdir -p /storage/playlists
+
+[Screenshots]
+  path = /storage/screenshots
+  available = yes
+  browsable = yes
+  public = yes
+  writable = yes
+  root preexec = mkdir -p /storage/screenshots
+
+[Shaders]
+  path = /tmp/shaders
+  available = yes
+  browsable = yes
+  public = yes
+  writable = yes
+  root preexec = mkdir -p /tmp/shaders
+
+[Joypads]
+  path = /tmp/joypads
+  available = yes
+  browsable = yes
+  public = yes
+  writable = yes
+  root preexec = mkdir -p /tmp/joypads
+
+[Cheats]
+  path = /tmp/database/cht
+  available = yes
+  browsable = yes
+  public = yes
+  writable = yes
+  root preexec = mkdir -p /tmp/database/cht
