Hatari: Add HatariSA to Emulationstation
Also bump to b14b742

--- a/packages/sx05re/emulationstation/config/es_systems.cfg
+++ b/packages/sx05re/emulationstation/config/es_systems.cfg
@@ -80,7 +80,7 @@ All systems must be contained within the <systemList> tag.-->
 		<fullname>Atari ST</fullname>
 		<path>/storage/roms/atarist</path>
 		<extension>.zip .st .stx .img .rom .raw .ipf .ctr .ST .STX .IMG .ROM .RAW .IPF .CTR</extension>
-		<command>/emuelec/scripts/emuelecRunEmu.sh LIBRETRO hatari %ROM% -PATARIST</command>   
+		<command>/emuelec/scripts/emuelecRunEmu.sh HATARI %ROM% -PATARIST</command>   
 		<platform>atarist</platform>
 		<theme>atarist</theme>
 	</system>
