EmuELEC: Add Yabasanshiro to es_systems.cfg
Also bump to d8e3e0b

--- a/packages/sx05re/emulationstation/config/es_systems.cfg
+++ b/packages/sx05re/emulationstation/config/es_systems.cfg
@@ -436,6 +436,15 @@ All systems must be contained within the <systemList> tag.-->
 		<theme>segacd</theme>
 	</system>
 	<system>
+		<name>segasaturn</name>
+		<fullname>Sega Saturn</fullname>
+		<path>/storage/roms/saturn</path>
+		<extension>.cue .CUE</extension>
+		<command>/emuelec/scripts/emuelecRunEmu.sh LIBRETRO yabasanshiro %ROM% -PSEGASATURN</command>   
+		<platform>saturn</platform>
+		<theme>saturn</theme>
+	</system>
+	<system>
 		<name>dreamcast</name>
 		<fullname>Sega Dreamcast</fullname>
 		<path>/storage/roms/dreamcast</path>
