Odroid N2: Set boot.ini default

--- a/projects/Amlogic-ng/bootloader/Odroid_N2_boot.ini
+++ b/projects/Amlogic-ng/bootloader/Odroid_N2_boot.ini
@@ -10,10 +10,8 @@ ODROIDN2-UBOOT-CONFIG
 #------------------------------------------------------------------------------------------------------
 
 setenv bootlabel "EmuELEC"
-setenv max_freq_a73 "1908"
-setenv max_freq_a53 "1992"
-setenv governor_a73 "performance"
-setenv governor_a53 "performance"
+setenv max_freq_a73 "1800"
+setenv max_freq_a53 "1896"
 setenv hdmi_cec "1"
 setenv remotewakeup "0x23dc4db2"
 setenv decode_type "0"
@@ -37,7 +35,7 @@ if test "${hdmi_cec}" = "1"; then setenv cec "hdmitx=cec3f"; fi
 if test "${emmc_timeout}" = "1"; then showlogo 1080p60hz 1920 1080 timeout-logo-1080.bmp.gz; sleep 30; mmc dev 1; mmc dev 0; fi
 if test "${gpiopower}" != ""; then setenv gpiopower "gpiopower=${gpiopower}"; fi
 setenv irsetup "hk-lirc-helper.remotewakeup=${remotewakeup} hk-lirc-helper.decode_type=${decode_type} hk-lirc-helper.remotewakeupmask=${remotewakeupmask}"
-setenv initargs "${rootopt} ${consoleopt} max_freq_a53=${max_freq_a53} max_freq_a73=${max_freq_a73} governor_a73=${governor_a73} governor_a53=${governor_a53} enable_wol=${wol} ${cec} ${irsetup} ${gpiopower} ${usbopts}"
+setenv initargs "${rootopt} ${consoleopt} max_freq_a53=${max_freq_a53} max_freq_a73=${max_freq_a73} enable_wol=${wol} ${cec} ${irsetup} ${gpiopower}"
 setenv bootargs "${initargs} ${displayopt} ${coreelec}"
 
 load mmc ${mmc_dev}:1 ${loadaddr} kernel.img
