--- a/packages/sx05re/emulationstation/config/es_settings.cfg
+++ b/packages/sx05re/emulationstation/config/es_settings.cfg
@@ -13,7 +13,7 @@
 <string name="EmuELEC_GBA_CORE" value="Libretro_mgba" />
 <string name="EmuELEC_GBC_CORE" value="Libretro_gambatte" />
 <string name="EmuELEC_GEN_CORE" value="Libretro_genesis_plus_gx" />
-<string name="EmuELEC_MAME_CORE" value="Libretro_mame2003_plus" />
+<string name="EmuELEC_MAME_CORE" value="AdvanceMame" />
 <string name="EmuELEC_N64_CORE" value="Libretro_mupen64plus_next" />
 <string name="EmuELEC_NES_CORE" value="Libretro_nestopia" />
 <string name="EmuELEC_PSP_CORE" value="PPSSPPSA" />
