--- a/packages/sx05re/emulationstation/config/es_settings.cfg
+++ b/packages/sx05re/emulationstation/config/es_settings.cfg
@@ -22,3 +22,4 @@
 <string name="EmuELEC_NEOCD_CORE" value="Libretro_libneocd" />
 <string name="EmuELEC_SMS_CORE" value="Libretro_gearsystem" />
 <string name="EmuELEC_HATARI_CORE" value="Libretro_hatari" />
+<string name="StartupSystem" value="scripts" />
