Enable custom video mode

--- a/packages/sx05re/emulationstation/config/es_settings.cfg
+++ b/packages/sx05re/emulationstation/config/es_settings.cfg
@@ -22,4 +22,5 @@
 <string name="EmuELEC_NEOCD_CORE" value="Libretro_libneocd" />
 <string name="EmuELEC_SMS_CORE" value="Libretro_gearsystem" />
 <string name="EmuELEC_HATARI_CORE" value="Libretro_hatari" />
+<string name="EmuELEC_VIDEO_MODE" value="1080p60hz" />
 <string name="StartupSystem" value="scripts" />
