Samba: More direct share for bezels and splash

--- a/packages/network/samba/config/smb.conf
+++ b/packages/network/samba/config/smb.conf
@@ -131,20 +131,20 @@
   root preexec = mkdir -p /tmp/overlays
 
 [Bezels]
-  path = /storage/overlays/bezels
+  path = /tmp/overlays/bezels
   available = yes
   browsable = yes
   public = yes
   writable = yes
-  root preexec = mkdir -p /storage/overlays/bezels
+  root preexec = mkdir -p /tmp/overlays/bezels
 
 [Splash]
-  path = /storage/overlays/splash
+  path = /tmp/overlays/splash
   available = yes
   browsable = yes
   public = yes
   writable = yes
-  root preexec = mkdir -p /storage/overlays/splash
+  root preexec = mkdir -p /tmp/overlays/splash
 
 [Cores]
   path = /tmp/cores
