--- a/packages/sx05re/batocera-emulationstation/config/es_settings.cfg
+++ b/packages/sx05re/batocera-emulationstation/config/es_settings.cfg
@@ -20,3 +20,5 @@
 <string name="EmuELEC_REICAST_CORE" value="REICASTSA" />
 <string name="EmuELEC_SNES_CORE" value="Libretro_snes9x" />
 <string name="EmuELEC_NEOCD_CORE" value="Libretro_libneocd" />
+<string name="AudioCard" value="default" />
+<string name="AudioDevice" value="PCM" />
