SDL-GameControllerDB: export by default

--- a/packages/sx05re/emuelec/profile.d/99-emuelec.conf
+++ b/packages/sx05re/emuelec/profile.d/99-emuelec.conf
@@ -3,3 +3,6 @@
 
 export LD_LIBRARY_PATH="/emuelec/lib:$LD_LIBRARY_PATH"
 export PATH="/emuelec/scripts:/emuelec/bin:$PATH"
+
+
+export SDL_GAMECONTROLLERCONFIG_FILE="/storage/.config/SDL-GameControllerDB/gamecontrollerdb.txt"
