Fix audio not working on N2

--- a/packages/sx05re/emuelec/config/asound.conf
+++ b/packages/sx05re/emuelec/config/asound.conf
@@ -1,11 +1,6 @@
-# SPDX-License-Identifier: GPL-2.0
-# Copyright (C) 2018-present Frank Hartung (supervisedthinking (@) gmail.com)
-
 pcm.!default {
-    type plug
-    slave.pcm {
-        @func getenv
-        vars [ ALSAPCM ]
-        default "sysdefault:CARD=AMLM8AUDIO"
-    }
+type plug
+slave {
+pcm "hw:0,0"
+}
 }
