--- a/packages/sx05re/batocera-emulationstation/config/es_settings.cfg
+++ b/packages/sx05re/batocera-emulationstation/config/es_settings.cfg
@@ -13,12 +13,15 @@
 <string name="EmuELEC_GBA_CORE" value="Libretro_mgba" />
 <string name="EmuELEC_GBC_CORE" value="Libretro_gambatte" />
 <string name="EmuELEC_GEN_CORE" value="Libretro_genesis_plus_gx" />
-<string name="EmuELEC_MAME_CORE" value="Libretro_mame2003_plus" />
+<string name="EmuELEC_MAME_CORE" value="AdvanceMame" />
 <string name="EmuELEC_N64_CORE" value="Libretro_mupen64plus_next" />
 <string name="EmuELEC_NES_CORE" value="Libretro_nestopia" />
 <string name="EmuELEC_PSP_CORE" value="PPSSPPSA" />
 <string name="EmuELEC_REICAST_CORE" value="REICASTSA" />
 <string name="EmuELEC_SNES_CORE" value="Libretro_snes9x" />
 <string name="EmuELEC_NEOCD_CORE" value="Libretro_libneocd" />
-<string name="AudioCard" value="default" />
-<string name="AudioDevice" value="PCM" />
+<string name="EmuELEC_SMS_CORE" value="Libretro_gearsystem" />
+<string name="EmuELEC_HATARI_CORE" value="Libretro_hatari" />
+<string name="EmuELEC_SCUMMVM_CORE" value="SCUMMVMSA" />
+<string name="EmuELEC_VIDEO_MODE" value="1080p60hz" />
+<string name="StartupSystem" value="scripts" />
