--- a/packages/sx05re/batocera-emulationstation/emuelec/configs/datainit/system/.hatari/hatari.cfg
+++ b/packages/sx05re/batocera-emulationstation/emuelec/configs/datainit/system/.hatari/hatari.cfg
@@ -167,8 +167,8 @@ YmVolumeMixing = 2
 [Memory]
 nMemorySize = 1
 bAutoSave = FALSE
-szMemoryCaptureFileName = /userdata/saves/atarist.sav
-szAutoSaveFileName = /userdata/saves/autosave_atarist.sav
+szMemoryCaptureFileName = /emuelec/saves/atarist.sav
+szAutoSaveFileName = /emuelec/saves/autosave_atarist.sav
 
 [Floppy]
 bAutoInsertDiskB = TRUE
@@ -182,7 +182,7 @@ szDiskAZipPath =
 szDiskAFileName =
 szDiskBZipPath =
 szDiskBFileName =
-szDiskImageDirectory = /userdata/roms/atarist
+szDiskImageDirectory = /storage/roms/atarist
 
 [HardDisk]
 nHardDiskDrive = 0
@@ -199,7 +199,7 @@ szIdeMasterHardDiskImage = /
 szIdeSlaveHardDiskImage = /
 
 [ROM]
-szTosImageFileName = /userdata/bios/tos.img
+szTosImageFileName = /emuelec/bios/tos.img
 bPatchTos = TRUE
 szCartridgeImageFileName =
 
