--- a/packages/sx05re/batocera-emulationstation/emuelec/configs/datainit/system/configs/retroarch/retroarchcustom.cfg
+++ b/packages/sx05re/batocera-emulationstation/emuelec/configs/datainit/system/configs/retroarch/retroarchcustom.cfg
@@ -1,6 +1,6 @@
-core_options_path = /userdata/system/configs/retroarch/cores/retroarch-core-options.cfg
+core_options_path = /emuelec/system/configs/retroarch/cores/retroarch-core-options.cfg
 
-system_directory = /userdata/bios/
+system_directory = /storage/roms/bios
 
 config_save_on_exit = false
 
@@ -22,17 +22,17 @@ savestate_auto_save = false
 savestate_auto_load = false
 
 video_shader_dir = /usr/share/batocera/datainit/shaders/
-screenshot_directory = /userdata/screenshots/
-savestate_directory = /userdata/saves/
-savefile_directory = /userdata/saves/
-extraction_directory = /userdata/extractions/
+screenshot_directory = /storage/screenshots/
+savestate_directory = /storage/saves/
+savefile_directory = /storage/saves/
+extraction_directory = /emuelec/usr/extractions/
 cheat_database_path = /usr/share/batocera/datainit/cheats/cht/
-cheat_settings_path = /userdata/cheats/saves/
+cheat_settings_path = /storage/cheats/saves/
 
 fastforward_ratio = -1.0
 input_autodetect_enable = false
 
-joypad_autoconfig_dir = /userdata/system/configs/retroarch/inputs/
+joypad_autoconfig_dir = /emuelec/system/configs/retroarch/inputs/
 
 input_joypad_driver = "sdl2"
 
