--- a/packages/sx05re/batocera-emulationstation/config/es_systems.cfg
+++ b/packages/sx05re/batocera-emulationstation/config/es_systems.cfg
@@ -246,13 +246,13 @@ All systems must be contained within the <systemList> tag.-->
 		<theme>msx2</theme>
 	</system>
 	<system>
-		<name>odyssey</name>
+		<name>odyssey2</name>
 		<fullname>Magnavox Odyssey</fullname>
 		<path>/storage/roms/odyssey</path>
 		<extension>.bin .BIN .zip .ZIP</extension>
 		<command>/emuelec/scripts/emuelecRunEmu.sh LIBRETRO o2em %ROM% -PODYSSEY</command>
-		<platform>odyssey</platform>
-		<theme>odyssey</theme>
+		<platform>odyssey2</platform>
+		<theme>odyssey2</theme>
 	</system>
 	<system>
 		<name>intellivision</name>
@@ -282,22 +282,22 @@ All systems must be contained within the <systemList> tag.-->
 		<theme>pcengine</theme>
 	</system>
 	<system>
-		<name>pcenginecd</name>
+		<name>pce-cd</name>
 		<fullname>NEC PC-Engine CD</fullname>
 		<path>/storage/roms/pcenginecd</path>
 		<extension>.pce .cue .zip .PCE .CUE .ZIP</extension>
 		<command>/emuelec/scripts/emuelecRunEmu.sh LIBRETRO mednafen_pce_fast %ROM% -PPCENGINECD</command>
-		<platform>pcenginecd</platform>
-		<theme>pcenginecd</theme>
+		<platform>pce-cd</platform>
+		<theme>pce-cd</theme>
 	</system>
 	<system>
-		<name>sgfx</name>
+		<name>supergrafx</name>
 		<fullname>NEC Super Grafx</fullname>
 		<path>/storage/roms/sgfx</path>
 		<extension>.pce .cue .zip .PCE .CUE .ZIP .7z</extension>
-		<command>/emuelec/scripts/emuelecRunEmu.sh LIBRETRO mednafen_supergrafx %ROM% -PSGFX</command>
-		<platform>sgfx</platform>
-		<theme>sgfx</theme>
+		<command>/emuelec/scripts/emuelecRunEmu.sh LIBRETRO mednafen_supergrafx %ROM% -PSUPERGRAFX</command>
+		<platform>supergrafx</platform>
+		<theme>supergrafx</theme>
 	</system>
 	<system>
 		<name>tg16</name>
@@ -381,13 +381,13 @@ All systems must be contained within the <systemList> tag.-->
 		<theme>gba</theme>
 	</system>
 	<system>
-		<name>gbahacks</name>
+		<name>gbah</name>
 		<fullname>Nintendo Game Boy Advance hacks</fullname>
 		<path>/storage/roms/gbah</path>
 		<extension>.zip .ZIP .gba .GBA</extension>
 		<command>/emuelec/scripts/emuelecRunEmu.sh GBA %ROM% -PGBA</command>
 		<platform>gbahacks</platform>
-		<theme>gbahacks</theme>
+		<theme>gbah</theme>
 	</system>
 	<system>
 		<name>gbc</name>
@@ -489,6 +489,15 @@ All systems must be contained within the <systemList> tag.-->
 		<theme>videopac</theme>
 	</system>
 	<system>
+		<name>3do</name>
+		<fullname>Phillips 3DO</fullname>
+		<path>/storage/roms/3do</path>
+		<extension>.iso .ISO .cue .CUE .bin .BIN</extension>
+		<command>/emuelec/scripts/emuelecRunEmu.sh LIBRETRO 4do %ROM% -P3DO</command>
+		<platform>3do</platform>
+		<theme>3do</theme>
+	</system>
+	<system>
 		<name>neogeo</name>
 		<fullname>SNK Neo-Geo</fullname>
 		<path>/storage/roms/neogeo</path>
@@ -579,13 +588,13 @@ All systems must be contained within the <systemList> tag.-->
 		<theme>gamegear</theme>
 	</system>
 	<system>
-		<name>gamegearhacks</name>
+		<name>ggh</name>
 		<fullname>Sega Game Gear Hacks</fullname>
 		<path>/storage/roms/gamegearh</path>
 		<extension>.zip .ZIP .gg .GG</extension>
 		<command>/emuelec/scripts/emuelecRunEmu.sh SMS %ROM% -PGAMEGEAR</command>
-		<platform>gamegearhacks</platform>
-		<theme>gamegearhacks</theme>
+		<platform>ggh</platform>
+		<theme>ggh</theme>
 	</system>
 	<system>
 		<name>genesis</name>
@@ -660,6 +669,15 @@ All systems must be contained within the <systemList> tag.-->
 		<theme>sg-1000</theme>
 	</system>
 	<system>
+		<name>segasaturn</name>
+		<fullname>Sega Saturn</fullname>
+		<path>/storage/roms/saturn</path>
+		<extension>.cue .CUE</extension>
+		<command>/emuelec/scripts/emuelecRunEmu.sh LIBRETRO yabasanshiro %ROM% -PSATURN</command>
+		<platform>saturn</platform>
+		<theme>saturn</theme>
+	</system>
+	<system>
 		<name>x68000</name>
 		<fullname>Sharp X68000</fullname>
 		<path>/storage/roms/x68000</path>
@@ -702,6 +720,6 @@ All systems must be contained within the <systemList> tag.-->
 		<extension>.elf .ELF .iso .ISO .cso .CSO .prx .PRX .pbp .PBP</extension>
 		<command>/emuelec/scripts/emuelecRunEmu.sh PSP %ROM% -PPSP</command>
 		<platform>psp</platform>
-		<theme/>
+		<theme>psp</theme>
 	</system>
 </systemList>
