--- a/packages/sx05re/batocera-emulationstation/emuelec/configs/emuelec.conf
+++ b/packages/sx05re/batocera-emulationstation/emuelec/configs/emuelec.conf
@@ -1,15 +1,3 @@
-# NOTE ON CEC FOR REMOTES
-# you've to plug the ODROID C2 on the HDMI1 of your tv
-# this is a limitation of the EXYNOS libcec adapter
-
-
-# ------------ A - System Options ----------- #
-## batocera.linux security
-# enforce security
-#   samba password required
-#   disable virtual gamepads
-#system.security.enabled=0
-
 ## EmulationStation menu style
 ## default -> default all options menu
 ## none -> no menu except the game search menu
@@ -22,12 +10,12 @@ system.hostname=EMUELEC
 ## Activate wifi (0,1)
 wifi.enabled=0
 ## Wifi SSID (string)
-wifi.ssid=INFINITUMF39E
+#wifi.ssid=
 ## Wifi KEY (string)
-## after rebooting the batocera.linux, the "new key" is replace by a hidden value "enc:xxxxx"
+## after rebooting the "new key" is replace by a hidden value "enc:xxxxx"
 ## you can edit the "enc:xxxxx" value to replace by a clear value, it will be updated again at the following reboot
 ## Escape your special chars (# ; $) with a backslash : $ => \$
-wifi.key=5B6KYFe6uw
+#wifi.key=
 
 # secondary wifi (not configurable via the user interface)
 #wifi2.ssid=new ssid
@@ -37,81 +25,24 @@ wifi.key=5B6KYFe6uw
 #wifi3.ssid=new ssid
 #wifi3.key=new key
 
-## Samba share
-#system.samba.enabled=1
-### Virtual Gamepads
-#system.virtual-gamepads.enabled=1
-### SSH
-#system.ssh.enabled=1
-
 # ------------ C - Audio ------------ #
 ## Set the audio device (auto, hdmi, jack)
 audio.device=default
 ## Set system volume (0..100)
 audio.volume=100
 ## Enable or disable system sounds in ES (0,1)
-audio.bgmusic=0
-
-
+audio.bgmusic=1
 
 # -------------- D - Controllers ----------------- #
 # Enable support for standard bluetooth controllers
 controllers.bluetooth.enabled=1
 
-
-## Please enable only one of these
-# -------------- D1 - PS3 Controllers ------------ #
-##Enable PS3 controllers support
-controllers.ps3.enabled=1
-## Choose a driver between bluez, official and shanwan
-## bluez -> bluez 5 + kernel drivers, support official and shanwan sisaxis
-## official -> sixad drivers, support official and gasia sisaxis
-## shanwan -> shanwan drivers, support official and shanwan sisaxis
-controllers.ps3.driver=bluez
-
-# ------------ D2 - XBOX Controllers ------------ #
-## Xbox controllers are already supported, but xboxdrv can solve some compatibility issues
-## Enable xboxdrv driver, disable this if you enabled ps3 controllers (0,1)
-controllers.xboxdrv.enabled=0
-## Set the amount of controllers to use with xboxdrv (0..4)
-controllers.xboxdrv.nbcontrols=2
-
-
-# ------------ D3 - GPIO Controllers ------------ #
-## GPIO Controllers
-## enable controllers on GPIO with mk_arcarde_joystick_rpi (0,1)
-controllers.gpio.enabled=0
-## mk_gpio arguments, map=1 for one controller, map=1,2 for 2 (map=1,map=1,2)
-controllers.gpio.args=map=1,2
-
-
-## DB9 Controllers
-## Enable DB9 drivers for atari, megadrive, amiga controllers (0,1)
-controllers.db9.enabled=0
-## db9 arguments
-controllers.db9.args=map=1
-
-## Gamecon controllers
-## Enable gamecon controllers, for nes, snes psx (0,1)
-controllers.gamecon.enabled=0
-## gamecon_args
-controllers.gamecon.args=map=1
-
-## XGaming's XArcade Tankstik and other compatible devices
-controllers.xarcade.enabled=1
-
-
-
 # ------------ F - Language and keyboard ------------ #
 ## Set the language of the system (fr_FR,en_US,en_GB,de_DE,pt_BR,es_ES,it_IT,eu_ES,tr_TR,zh_CN)
 system.language=en_US
-## set the keyboard layout (fr,en,de,us,es)
-#system.kblayout=us
 ## Set you local time
 ## Select your timezone from : ls /usr/share/zoneinfo/ (string)
 system.timezone=Mexico/General
-
-
 
 # ------------ G - UPDATES ------------ #
 ## Automatically check for updates at start (0,1)
@@ -123,14 +54,6 @@ updates.type=stable
 # ------------ H - HERE IT IS - GLOBAL EMULATOR CONFIGURATION ------------ #
 ## The global value will be used for all emulators, except if the value
 ## is redefined in the emulator
-
-## Set game resolution for emulators
-## select your mode from the command : tvservice -m [MODE]
-## CEA 5 HDMI : 1920x1080 @ 60Hz 16:9, clock:74MHz interlaced
-## CEA 4 HDMI : 1280x720 @ 60Hz 16:9, clock:74MHz progressive
-## use 'default' for using the default resolution
-## (string)
-#global.videomode=CEA 1 HDMI
 
 ## Shader set
 ## Automatically select shaders for all systems
@@ -147,7 +70,7 @@ updates.type=stable
 #global.bezel=default
 
 ## Set ratio for all emulators (auto,4/3,16/9,16/10,custom)
-global.ratio=4/3
+#global.ratio=4/3
 
 ## Set smooth for all emulators (0,1)
 #global.smooth=1
@@ -172,24 +95,18 @@ global.retroachievements.password=
 # ------------ I - EMULATORS CHOICES ----------- #
 ## You can override the global configuration here
 ## Here is the snes example
-#snes.videomode=CEA 4 HDMI
-#snes.core=snes9x_next
-#snes.shaders=/emuelec/shaders/shaders_glsl/mysnesshader.gplsp
+#snes.shaders=mysnesshader.gplsp
 #snes.ratio=16/9
 #snes.smooth=0
 #snes.rewind=1
 #snes.autosave=0
-#snes.emulator=libretro
 #snes.integerscale=0
 
 # scrapper
 # Comma seperated order to prefer images, s=snapshot, b=boxart, f=fanart, a=banner, l=logo, 3b=3D boxart
 #scrapper.style=s,b,f,a,l,3b
 
-## Configurations generated by batocera.linux
+## Configurations generated by Emulationstation
 audio.display_titles=1
 audio.display_titles_time=10
 audio.persystem=0
-nbbatman.zip.integerscale=1
-nes.integerscale=1
-nes.ratio=4/3
