--- a/packages/sx05re/emuelec/profile.d/99-emuelec.conf
+++ b/packages/sx05re/emuelec/profile.d/99-emuelec.conf
@@ -2,7 +2,6 @@
 # Copyright (C) 2019-present Shanti Gilbert (https://github.com/shantigilbert)
 
 export LD_LIBRARY_PATH="/emuelec/lib:$LD_LIBRARY_PATH"
-export PATH="/emuelec/scripts:/emuelec/bin:$PATH"
-
+export PATH="/emuelec/scripts/batocera:/emuelec/scripts:/emuelec/bin:$PATH"
 
 export SDL_GAMECONTROLLERCONFIG_FILE="/storage/.config/SDL-GameControllerDB/gamecontrollerdb.txt"
