es_systems.cfg: Use correct platforms

--- a/packages/sx05re/batocera-emulationstation/config/es_systems.cfg
+++ b/packages/sx05re/batocera-emulationstation/config/es_systems.cfg
@@ -26,7 +26,7 @@ All systems must be contained within the <systemList> tag.-->
 		<path>/storage/roms/mame</path>
 		<extension>.7z .7Z .cue .CUE .fba .FBA .iso .ISO .zip .ZIP .chd .CHD</extension>
 		<command>/emuelec/scripts/emuelecRunEmu.sh MAME %ROM% -PMAME</command>
-		<platform>mame</platform>
+		<platform>arcade</platform>
 		<theme>mame</theme>
 	</system>
 	<system>
@@ -116,7 +116,7 @@ All systems must be contained within the <systemList> tag.-->
 		<path>/storage/roms/capcom</path>
 		<extension>.7z .fba .zip .7Z .FBA .ZIP</extension>
 		<command>/emuelec/scripts/emuelecRunEmu.sh FBN %ROM% -PARCADE</command>
-		<platform>capcom</platform>
+		<platform>arcade</platform>
 		<theme>capcom</theme>
 	</system>
 	<system>
@@ -224,7 +224,7 @@ All systems must be contained within the <systemList> tag.-->
 		<path>/storage/roms/fbneo</path>
 		<extension>.7z .fba .zip .7Z .FBA .ZIP</extension>
 		<command>/emuelec/scripts/emuelecRunEmu.sh FBN %ROM% -PFBN</command>
-		<platform>fba</platform>
+		<platform>arcade</platform>
 		<theme>fba</theme>
 	</system>
 	<system>
@@ -287,7 +287,7 @@ All systems must be contained within the <systemList> tag.-->
 		<path>/storage/roms/pcenginecd</path>
 		<extension>.pce .cue .zip .PCE .CUE .ZIP</extension>
 		<command>/emuelec/scripts/emuelecRunEmu.sh LIBRETRO mednafen_pce_fast %ROM% -PPCENGINECD</command>
-		<platform>pce-cd</platform>
+		<platform>pcenginecd</platform>
 		<theme>pce-cd</theme>
 	</system>
 	<system>
@@ -305,7 +305,7 @@ All systems must be contained within the <systemList> tag.-->
 		<path>/storage/roms/tg16</path>
 		<extension>.pce .cue .zip .PCE .CUE .ZIP</extension>
 		<command>/emuelec/scripts/emuelecRunEmu.sh LIBRETRO mednafen_pce_fast %ROM% -PTG16</command>
-		<platform>tg16</platform>
+		<platform>pcengine</platform>
 		<theme>tg16</theme>
 	</system>
 	<system>
@@ -314,7 +314,7 @@ All systems must be contained within the <systemList> tag.-->
 		<path>/storage/roms/tg16cd</path>
 		<extension>.ccd .cue .pce .CCD .CUE .PCE .7z</extension>
 		<command>/emuelec/scripts/emuelecRunEmu.sh LIBRETRO mednafen_pce_fast %ROM% -PTG16CD</command>
-		<platform>tg16cd</platform>
+		<platform>pcenginecd</platform>
 		<theme>tg16cd</theme>
 	</system>
 	<system>
@@ -386,7 +386,7 @@ All systems must be contained within the <systemList> tag.-->
 		<path>/storage/roms/gbah</path>
 		<extension>.zip .ZIP .gba .GBA</extension>
 		<command>/emuelec/scripts/emuelecRunEmu.sh GBA %ROM% -PGBA</command>
-		<platform>gbahacks</platform>
+		<platform>gba</platform>
 		<theme>gbah</theme>
 	</system>
 	<system>
@@ -404,7 +404,7 @@ All systems must be contained within the <systemList> tag.-->
 		<path>/storage/roms/gbh</path>
 		<extension>.zip .ZIP .gb .GB</extension>
 		<command>/emuelec/scripts/emuelecRunEmu.sh GBC %ROM% -PGB</command>
-		<platform>gbh</platform>
+		<platform>gb</platform>
 		<theme>gbh</theme>
 	</system>
 	<system>
@@ -449,7 +449,7 @@ All systems must be contained within the <systemList> tag.-->
 		<path>/storage/roms/snesmsu1</path>
 		<extension>.smc .SMC .fig .FIG .sfc .SFC .gd3 .GD3 .gd7 .GD7 .dx2 .DX2 .bsx .BSX .swc .SWC .zip .ZIP</extension>
 		<command>/emuelec/scripts/emuelecRunEmu.sh LIBRETRO snes9x %ROM% -PSNES</command>
-		<platform>snesmsu1</platform>
+		<platform>snes</platform>
 		<theme>snesmsu1</theme>
 	</system>
 	<system>
@@ -475,9 +475,9 @@ All systems must be contained within the <systemList> tag.-->
 		<fullname>PC-FX</fullname>
 		<path>/storage/roms/pcfx</path>
 		<extension>.bin .Bin .chd</extension>
-		<command>/emuelec/scripts/emuelecRunEmu.sh LIBRETRO mednafen_pcfx %ROM% -PPC-FX</command>
-		<platform>PC-FX</platform>
-		<theme>PC-FX</theme>
+		<command>/emuelec/scripts/emuelecRunEmu.sh LIBRETRO mednafen_pcfx %ROM% -PPCFX</command>
+		<platform>pcfx</platform>
+		<theme>pcfx</theme>
 	</system>
 	<system>
 		<name>videopac</name>
@@ -511,9 +511,9 @@ All systems must be contained within the <systemList> tag.-->
 		<fullname>SNK Neo-Geo CD</fullname>
 		<path>/storage/roms/neocd</path>
 		<extension>.cue .CUE .chd .CHD</extension>
-		<command>/emuelec/scripts/emuelecRunEmu.sh NEOCD %ROM% -PNEOCD</command>
-		<platform>neocd</platform>
-		<theme>neocd</theme>
+		<command>/emuelec/scripts/emuelecRunEmu.sh NEOCD %ROM% -PNEOGEOCD</command>
+		<platform>neogeocd</platform>
+		<theme>neogeocd</theme>
 	</system>
 	<system>
 		<name>ngp</name>
@@ -534,13 +534,13 @@ All systems must be contained within the <systemList> tag.-->
 		<theme>ngpc</theme>
 	</system>
 	<system>
-		<name>scripts</name>
-		<fullname>Scripts</fullname>
+		<name>setup</name>
+		<fullname>Setup</fullname>
 		<path>/emuelec/scripts/modules</path>
 		<extension>.sh</extension>
 		<command>/emuelec/scripts/emuelecRunEmu.sh RETROPIE %ROM% KEEPMUSIC</command>
-		<platform>scripts</platform>
-		<theme>scripts</theme>
+		<platform>setup</platform>
+		<theme>setup</theme>
 	</system>
 	<system>
 		<name>scummvm</name>
@@ -548,7 +548,7 @@ All systems must be contained within the <systemList> tag.-->
 		<path>/storage/roms/scummvm</path>
 		<extension>.sh .SH .svm .SVM</extension>
 		<command>/emuelec/scripts/emuelecRunEmu.sh LIBRETRO scummvm %ROM% -PSCUMMVM</command>
-		<platform>scummvm</platform>
+		<platform>pc</platform>
 		<theme>scummvm</theme>
 	</system>
 	<system>
@@ -593,7 +593,7 @@ All systems must be contained within the <systemList> tag.-->
 		<path>/storage/roms/gamegearh</path>
 		<extension>.zip .ZIP .gg .GG</extension>
 		<command>/emuelec/scripts/emuelecRunEmu.sh SMS %ROM% -PGAMEGEAR</command>
-		<platform>ggh</platform>
+		<platform>gamegear</platform>
 		<theme>ggh</theme>
 	</system>
 	<system>
@@ -638,7 +638,7 @@ All systems must be contained within the <systemList> tag.-->
 		<path>/storage/roms/megadrive-japan</path>
 		<extension>.zip .ZIP .md .MD</extension>
 		<command>/emuelec/scripts/emuelecRunEmu.sh GEN %ROM% -PMEGADRIVE</command>
-		<platform>megadrive-japan</platform>
+		<platform>megadrive</platform>
 		<theme>megadrive-japan</theme>
 	</system>
 	<system>
