Emulationstation: Add option to always show boot video

--- a/packages/sx05re/emuelec/profile.d/99-emuelec.conf
+++ b/packages/sx05re/emuelec/profile.d/99-emuelec.conf
@@ -5,3 +5,16 @@ export LD_LIBRARY_PATH="/emuelec/lib:$LD_LIBRARY_PATH"
 export PATH="/emuelec/scripts/batocera:/emuelec/scripts:/emuelec/bin:$PATH"
 
 export SDL_GAMECONTROLLERCONFIG_FILE="/storage/.config/SDL-GameControllerDB/gamecontrollerdb.txt"
+
+EE_CONF="/storage/.config/emuelec/configs/emuelec.conf"
+
+get_ee_setting() {
+	PAT="s|^ee_${1}=\(.*\)|\1|p"
+	EES=$(sed -n "${PAT}" "${EE_CONF}")
+	echo $EES
+}
+
+set_ee_setting() {
+	sed -i '/ee_$1 =/d' "${EE_CONF}"
+	[ $2 == "disable" ] && echo "#ee_${1}=" >> "${EE_CONF}" || echo "ee_${1}=${2}" >> "${EE_CONF}"
+}
