es_systems.cfg: Fix scummvm command

--- a/packages/sx05re/emuelec-emulationstation/config/es_systems.cfg
+++ b/packages/sx05re/emuelec-emulationstation/config/es_systems.cfg
@@ -546,8 +546,8 @@ All systems must be contained within the <systemList> tag.-->
 		<name>scummvm</name>
 		<fullname>ScummVM</fullname>
 		<path>/storage/roms/scummvm</path>
-		<extension>.sh .SH .svm .SVM</extension>
-		<command>/emuelec/scripts/emuelecRunEmu.sh LIBRETRO scummvm %ROM% -PSCUMMVM</command>
+		<extension>.sh .SH .svm .SVM .scummvm</extension>
+		<command>/emuelec/scripts/emuelecRunEmu.sh SCUMMVM %ROM% -PSCUMMVM</command>
 		<platform>pc</platform>
 		<theme>scummvm</theme>
 	</system>
