Add regular libretro dosbox
Use Dosboxsdl as default

--- a/packages/sx05re/emuelec-emulationstation/config/es_settings.cfg
+++ b/packages/sx05re/emuelec-emulationstation/config/es_settings.cfg
@@ -6,9 +6,9 @@
 <bool name="EmuELEC_BEZELS" value="false" />
 <string name="EmuELEC_BGM_BOOT" value="No" />
 <string name="EmuELEC_BOOT" value="Emulationstation" />
-<string name="EmuELEC_AMIGA_CORE" value="Libretro_puae" />
+<string name="EmuELEC_AMIGA_CORE" value="AMIBERRY" />
 <string name="EmuELEC_ARCADE_CORE" value="Libretro_mame2003_plus" />
-<string name="EmuELEC_DOSBOX_CORE" value="Libretro_dosbox_svn" />
+<string name="EmuELEC_DOSBOX_CORE" value="DOSBOXSDL2" />
 <string name="EmuELEC_FBN_CORE" value="Libretro_fbneo" />
 <string name="EmuELEC_GBA_CORE" value="Libretro_mgba" />
 <string name="EmuELEC_GBC_CORE" value="Libretro_gambatte" />
