--- a/packages/sx05re/emuelec-emulationstation/config/es_systems.cfg
+++ b/packages/sx05re/emuelec-emulationstation/config/es_systems.cfg
@@ -534,6 +534,15 @@ All systems must be contained within the <systemList> tag.-->
 		<theme>ngpc</theme>
 	</system>
 	<system>
+		<name>residualvm</name>
+		<fullname>ResidualVM</fullname>
+		<path>/storage/.config/residualvm/games</path>
+		<extension>.sh .SH .rvm .RVM .residualvm</extension>
+		<command>/emuelec/scripts/emuelecRunEmu.sh RESIDUALVM %ROM% -PRESIDUALVM</command>
+		<platform>pc</platform>
+		<theme>residualvm</theme>
+	</system>
+	<system>
 		<name>setup</name>
 		<fullname>Setup</fullname>
 		<path>/emuelec/scripts/modules</path>
@@ -545,7 +554,7 @@ All systems must be contained within the <systemList> tag.-->
 	<system>
 		<name>scummvm</name>
 		<fullname>ScummVM</fullname>
-		<path>/storage/roms/scummvm</path>
+		<path>/storage/.config/scummvm/games</path>
 		<extension>.sh .SH .svm .SVM .scummvm</extension>
 		<command>/emuelec/scripts/emuelecRunEmu.sh SCUMMVM %ROM% -PSCUMMVM</command>
 		<platform>pc</platform>
