emuelec-emulationstation: Bump to ec031f2

--- a/packages/sx05re/emuelec-emulationstation/config/es_systems.cfg
+++ b/packages/sx05re/emuelec-emulationstation/config/es_systems.cfg
@@ -6,7 +6,7 @@ All systems must be contained within the <systemList> tag.-->
 		<name>amstradcpc</name>
 		<fullname>Amstrad CPC</fullname>
 		<path>/storage/roms/amstradcpc</path>
-		<extension>.cdt .cpc .CDT .CPC .DSK</extension>
+		<extension>.cdt .cpc .dsk .CDT .CPC .DSK</extension>
 		<command>/emuelec/scripts/emuelecRunEmu.sh LIBRETRO cap32 %ROM% -PAMSTRADCPC</command>
 		<platform>amstradcpc</platform>
 		<theme>amstradcpc</theme>
@@ -181,6 +181,15 @@ All systems must be contained within the <systemList> tag.-->
 		<command>/emuelec/scripts/emuelecRunEmu.sh AMIGA %ROM% -PAMIGA</command>
 		<platform>amiga</platform>
 		<theme>amiga</theme>
+	</system>
+	<system>
+		<name>amigacd32</name>
+		<fullname>Commodore Amiga CD 32</fullname>
+		<path>/storage/roms/amigacd32</path>
+		<extension>.adf .adz .dms .ipf .lha .sh .uae .zip .ADF .ADZ .DMS .IPF .LHA .SH .UAE .ZIP</extension>
+		<command>/emuelec/scripts/emuelecRunEmu.sh AMIGA %ROM% -PAMIGACD32</command>
+		<platform>amigacd32</platform>
+		<theme>amigacd32</theme>
 	</system>
 	<system>
 		<name>c16</name>
@@ -482,7 +491,7 @@ All systems must be contained within the <systemList> tag.-->
 	<system>
 		<name>videopac</name>
 		<fullname>Philips VideoPac</fullname>
-		<path>/storage/roms/videopac</path>
+		<path>/storage/roms/videopac2</path>
 		<extension>.bin .BIN</extension>
 		<command>/emuelec/scripts/emuelecRunEmu.sh LIBRETRO o2em %ROM% -PVIDEOPAC</command>
 		<platform>videopac</platform>
