--- a/packages/sx05re/emuelec-emulationstation/emuelec/configs/emuelec.conf
+++ b/packages/sx05re/emuelec-emulationstation/emuelec/configs/emuelec.conf
@@ -81,6 +81,12 @@ updates.type=stable
 ## Set autosave/load savestate for all emulators (0,1)
 #global.autosave=0
 
+## Set runahead frames for all emulators (0,1,2,3,4,5,6)
+global.runahead=0
+
+## Set secondinstance for runahead for all emulators (0,1)
+global.secondinstance=0
+
 ## Enable retroarchievements (0,1)
 ## Set your www.retroachievements.org username/password
 ## Escape your special chars (# ; $) with a backslash : $ => \$
