Change main ES theme
Unfortunately the theme EmuELEC has been used for a while was getting old and has a bug with videos :(

--- a/packages/sx05re/emuelec-emulationstation/config/es_settings.cfg
+++ b/packages/sx05re/emuelec-emulationstation/config/es_settings.cfg
@@ -25,3 +25,5 @@
 <string name="EmuELEC_SCUMMVM_CORE" value="SCUMMVMSA" />
 <string name="EmuELEC_VIDEO_MODE" value="1080p60hz" />
 <string name="StartupSystem" value="scripts" />
+<string name="GamelistViewStyle" value="Basic grid + details" />
+<string name="ThemeSet" value="es-theme-carbon" />
