Refactor some settings to be used in emuelec.conf
* Put some functions in profile.d 
* Change some settings to use emuele.conf
* This also fixes #43 by forcing video mode if EE_VIDEO_MODE file exists and its not empty (eg it includes the videomode inside)
* Remove some unused scripts 
* Rename package emulationstation-addon used only for the addon

--- a/packages/sx05re/emuelec-emulationstation/config/es_settings.cfg
+++ b/packages/sx05re/emuelec-emulationstation/config/es_settings.cfg
@@ -1,11 +1,5 @@
 <?xml version="1.0"?>
-<string name="TransitionStyle" value="instant" />
-<bool name="BGM" value="false" />
-<bool name="SSH" value="true" />
-<bool name="EmuELEC_SPLASH" value="true" />
-<bool name="EmuELEC_BEZELS" value="false" />
-<string name="EmuELEC_BGM_BOOT" value="No" />
-<string name="EmuELEC_BOOT" value="Emulationstation" />
+<string name="TransitionStyle" value="slide" />
 <string name="EmuELEC_AMIGA_CORE" value="AMIBERRY" />
 <string name="EmuELEC_ARCADE_CORE" value="Libretro_mame2003_plus" />
 <string name="EmuELEC_DOSBOX_CORE" value="DOSBOXSDL2" />
@@ -23,7 +17,6 @@
 <string name="EmuELEC_SMS_CORE" value="Libretro_gearsystem" />
 <string name="EmuELEC_HATARI_CORE" value="Libretro_hatari" />
 <string name="EmuELEC_SCUMMVM_CORE" value="SCUMMVMSA" />
-<string name="EmuELEC_VIDEO_MODE" value="1080p60hz" />
-<string name="StartupSystem" value="scripts" />
-<string name="GamelistViewStyle" value="Basic grid + details" />
+<string name="GamelistViewStyle" value="Carousel + Details" />
+<string name="FolderViewMode" value="having multiple games" />
 <string name="ThemeSet" value="es-theme-carbon" />
