--- a/packages/sx05re/emuelec-emulationstation/emuelec/configs/emuelec.conf
+++ b/packages/sx05re/emuelec-emulationstation/emuelec/configs/emuelec.conf
@@ -1,3 +1,22 @@
+## ------------ A - EmuELEC configuration ------------ #
+## Enable SSH at boot
+ee_ssh.enabled=1
+
+## Always show boot video
+#ee_bootvideo.enabled=0
+
+## Set video mode
+ee_videomode=1080p60hz
+
+## What to start at boot Emulationstation or Retroarch
+ee_boot=Emulationstation
+
+## Enable retroarch bezels
+ee_bezels.enabled=0
+
+## Enable splash screens
+ee_splash.enabled=1
+
 ## EmulationStation menu style
 ## default -> default all options menu
 ## none -> no menu except the game search menu
