--- a/packages/sx05re/emuelec/profile.d/99-emuelec.conf
+++ b/packages/sx05re/emuelec/profile.d/99-emuelec.conf
@@ -6,15 +6,27 @@ export PATH="/emuelec/scripts/batocera:/emuelec/scripts:/emuelec/bin:$PATH"
 
 export SDL_GAMECONTROLLERCONFIG_FILE="/storage/.config/SDL-GameControllerDB/gamecontrollerdb.txt"
 
-EE_CONF="/storage/.config/emuelec/configs/emuelec.conf"
+EE_DIR="/storage/.config/emuelec"
+EE_CONF="${EE_DIR}/configs/emuelec.conf"
+ES_CONF="/storage/.emulationstation/es_settings.cfg"
 
 get_ee_setting() {
+# Argument $1 is the setting name, EmuELEC settings alway start with ee_ no need to pass it e.g. novideo
 	PAT="s|^ee_${1}=\(.*\)|\1|p"
 	EES=$(sed -n "${PAT}" "${EE_CONF}")
 	echo $EES
 }
 
 set_ee_setting() {
-	sed -i '/ee_$1 =/d' "${EE_CONF}"
+# argument $1 is the setting name e.g. nes.integerscale. $2 is the value, e.g "1"
+	sed -i '/^ee_$1 =/d' "${EE_CONF}"
 	[ $2 == "disable" ] && echo "#ee_${1}=" >> "${EE_CONF}" || echo "ee_${1}=${2}" >> "${EE_CONF}"
+}
+
+set_audio() { 
+${EE_DIR}/scripts/rr_audio.sh ${1}
+}
+
+get_es_setting() { 
+	echo $(sed -n "s|\s*<${1} name=\"${2}\" value=\"\(.*\)\" />|\1|p" ${ES_CONF})
 }
