Add splash delay to emuelec.conf

--- a/packages/sx05re/emuelec-emulationstation/emuelec/configs/emuelec.conf
+++ b/packages/sx05re/emuelec-emulationstation/emuelec/configs/emuelec.conf
@@ -17,6 +17,9 @@ ee_bezels.enabled=0
 ## Enable splash screens
 ee_splash.enabled=1
 
+## Force splash screens to display for X seconds
+#ee_splash.delay=0
+
 ## EmulationStation menu style
 ## default -> default all options menu
 ## none -> no menu except the game search menu
