--- a/packages/sx05re/emuelec-emulationstation/config/es_settings.cfg
+++ b/packages/sx05re/emuelec-emulationstation/config/es_settings.cfg
@@ -11,7 +11,7 @@
 <string name="EmuELEC_N64_CORE" value="Libretro_mupen64plus_next" />
 <string name="EmuELEC_NES_CORE" value="Libretro_nestopia" />
 <string name="EmuELEC_PSP_CORE" value="PPSSPPSA" />
-<string name="EmuELEC_REICAST_CORE" value="REICASTSA" />
+<string name="EmuELEC_REICAST_CORE" value="Libretro_flycast" />
 <string name="EmuELEC_SNES_CORE" value="Libretro_snes9x" />
 <string name="EmuELEC_NEOCD_CORE" value="Libretro_libneocd" />
 <string name="EmuELEC_SMS_CORE" value="Libretro_gearsystem" />
