--- a/packages/sx05re/emuelec-emulationstation/config/es_systems.cfg
+++ b/packages/sx05re/emuelec-emulationstation/config/es_systems.cfg
@@ -519,7 +519,7 @@ All systems must be contained within the <systemList> tag.-->
 		<name>neocd</name>
 		<fullname>SNK Neo-Geo CD</fullname>
 		<path>/storage/roms/neocd</path>
-		<extension>.cue .CUE .iso .ISO .7z .7Z .chd .CHD</extension>
+		<extension>.cue .CUE .iso .ISO .7z .bin .BIN .zip .ZIP .7Z .chd .CHD</extension>
 		<command>/emuelec/scripts/emuelecRunEmu.sh NEOCD %ROM% -PNEOGEOCD</command>
 		<platform>neogeocd</platform>
 		<theme>neogeocd</theme>
