PPSSPPSDL: Remove duplicate ppssp.ini

--- a/packages/sx05re/emulators/PPSSPPSDL/config/PSP/SYSTEM/ppsspp.ini
+++ b/packages/sx05re/emulators/PPSSPPSDL/config/PSP/SYSTEM/ppsspp.ini
@@ -5,7 +5,7 @@ Enable Logging = False
 AutoRun = True
 Browse = False
 IgnoreBadMemAccess = True
-CurrentDirectory = /home/pigaming/RetroArena/roms/psp
+CurrentDirectory = /storage/roms/psp
 ShowDebuggerOnLoad = False
 CheckForNewVersion = False
 Language = en_US
