emuelec-emulationstation: Add ee_audio_device to ES menu

--- a/packages/sx05re/emuelec/config/emuelec/configs/emuelec.conf
+++ b/packages/sx05re/emuelec/config/emuelec/configs/emuelec.conf
@@ -20,8 +20,8 @@ ee_splash.enabled=1
 ## Force splash screens to display for X seconds
 #ee_splash.delay=0
 
-# If you have no audio change this, try auto, hw:0,0, hw:0,1, hw:1,0, hw:1,1
-ee_audio_device=auto
+# Audio device to use, comment for auto, other options 0,0 (default) 0,1 (for some AV outputs)
+#ee_audio_device=auto
 
 ## EmulationStation menu style
 ## default -> default all options menu
