es_input.cfg: Modify pagedown and up for PK7 joystick

--- a/packages/sx05re/emuelec-emulationstation/config/es_input.cfg
+++ b/packages/sx05re/emuelec-emulationstation/config/es_input.cfg
@@ -43,8 +43,8 @@
     <input name="y" type="button" id="2" value="1"/>
     <input name="left" type="hat" id="0" value="8"/>
     <input name="rightanalogright" type="button" id="9" value="1"/>
-    <input name="leftshoulder" type="button" id="3" value="1"/>
-    <input name="rightshoulder" type="button" id="6" value="1"/>
+    <input name="lefttrigger" type="button" id="3" value="1"/>
+    <input name="righttrigger" type="button" id="6" value="1"/>
   </inputConfig>
   <inputConfig type="joystick" deviceName="Sony Interactive Entertainment Wireless Controller" deviceGUID="030000004c050000cc09000011010000">
     <input name="rightanalogdown" type="axis" id="5" value="1"/>
